fix overflow app

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
   }
 
   .App__title {
@@ -25,7 +24,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
   }
 
   .App__title {
